<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <!--Toolber Start-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_expense"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <!--Toolber End-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/expenseTypeSpnr"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_rectangle_corner_radius"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/amountET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rectangle_round_corner_transperent"
            android:drawableRight="@drawable/ic_attach_money"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/enter_expense_ammount"
            android:padding="8dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/datetET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rectangle_round_corner_transperent"
            android:drawableRight="@drawable/ic_date"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/enter_date"
            android:padding="8dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/timetET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rectangle_round_corner_transperent"
            android:drawableRight="@drawable/ic_access_time"
            android:drawableTint="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/enter_time"
            android:padding="8dp"
            android:textColorHint="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/documentIV"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_image" />

        <Button
            android:id="@+id/updateDocumentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/update_document"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/deep_green"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>