<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseListActivity">

    <!--Toolber Start-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/expense_list"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <!--Toolber End-->

    <!--Datepicker Start-->
    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:weightSum="5">
        <!--Start Date Start-->
        <RelativeLayout
            android:id="@+id/startDateLayoute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_rectangle_upper_cornar_redious">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/startDateTVe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:background="@color/deep_green"
                android:foregroundGravity="bottom" />

        </RelativeLayout>
        <!--Start Date Start-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="To"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <!--End Date Start-->
        <RelativeLayout
            android:id="@+id/endDateLayoute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_rectangle_upper_cornar_redious">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/endDateTVe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:background="@color/red"
                android:foregroundGravity="bottom" />

        </RelativeLayout>
        <!--End Date Start-->


    </LinearLayout>
    <!--Datepicker End -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expenseListRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLayout"
        android:layout_marginTop="20dp">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>