<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--Toolbar Start -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dashboard"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <!--Toolbar End -->
    <!--Datepicker Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:weightSum="5">
        <!--Start Date Start-->
        <RelativeLayout
            android:id="@+id/startDateLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_rectangle_upper_cornar_redious">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/startDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:background="@color/deep_green"
                android:foregroundGravity="bottom" />

        </RelativeLayout>
        <!--Start Date Start-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="To"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <!--End Date Start-->
        <RelativeLayout
            android:id="@+id/endDateLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/shape_rectangle_upper_cornar_redious">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/endDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/end_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="end"
                android:background="@color/red"
                android:foregroundGravity="bottom" />

        </RelativeLayout>
        <!--End Date Start-->


    </LinearLayout>
    <!--Datepicker End -->
    <!--Frame Layout Fragment Start -->
    <androidx.cardview.widget.CardView
        android:id="@+id/expenseCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/shape_rectangle_corner_radius"
        android:elevation="2dp">

        <FrameLayout
            android:id="@+id/expenseFramaLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerInParent="true">


        </FrameLayout>
    </androidx.cardview.widget.CardView>
    <!--Frame Layout Fragment Start -->
    <!-- Button of Add Expense List and Add Expense-->

    <Button
        android:id="@+id/addExpenseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expenseCardView"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:onClick="addExpense"
        android:text="@string/add_expense"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/expenseListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addExpenseBtn"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:onClick="expenseList"
        android:text="@string/add_expense"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Button of Add Expense List and Add Expense end-->


    <!-- Borrom Navigation Start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/monthFragmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/deep_green"
            android:text="Month"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/weakFragmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="Weak"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/todayFragmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/deep_green"
            android:text="Today"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />


    </LinearLayout>
    <!-- Borrom Navigation End-->

</RelativeLayout>